add account link verification test

--- a/testreport.html
+++ b/testreport.html
@@ -73,10 +73,10 @@
       <div class="client-logo" style="padding:15px"></div>
       <div class="bg-primary" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
         <h3>Summary</h3><br>
-        <p class="lead">Start Time: Mon Sep 13 2021 13:42:17 GMT+0200 (Central European Summer Time)</p>
+        <p class="lead">Start Time: Mon Sep 13 2021 16:58:36 GMT+0200 (Central European Summer Time)</p>
         <p class="lead">Browsers: Chrome 93.0.4577.63 / macOS 10.15.7</p>
-        <p class="lead">Duration: 11s</p>
-        <p class="lead">Tests Failed: 0 out of 5</p>
+        <p class="lead">Duration: 13s</p>
+        <p class="lead">Tests Failed: 0 out of 6</p>
         <p class="lead">Tests Skipped: 0</p>
       </div><br>
       <table class="table sortable" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
@@ -129,6 +129,14 @@
   <td>Verify resend verification link for account not verified</td>
   <td>Chrome 93.0.4577.63 / macOS 10.15.7</td>
   <td>4s</td>
+  <td>passed</td>
+ </tr>
+ <tr class="success">
+  <td>6</td>
+  <td>User Login Test</td>
+  <td>Verify create account link functionality</td>
+  <td>Chrome 93.0.4577.63 / macOS 10.15.7</td>
+  <td>1s</td>
   <td>passed</td>
  </tr>
 
